# hello_rust

./: CMakeLists.txt  README.md  diagram.json  sdkconfig  sdkconfig.old  wokwi.toml
components/rust-hello_rust/: CMakeLists.txt  Cargo.toml
components/rust-hello_rust/src/: lib.rs
