[package]
name = "rust-hello_rust"
version = "0.1.0"
authors = ["Aaron Tsui <aaron.tsui@outlook.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.93"

[features]
default = []
alloc-mode = ["dep:esp-idf-svc", "dep:log", "esp-idf-sys/alloc_handler", "esp-idf-sys/panic_handler"]
no-alloc-mode = ["esp-idf-sys/panic_handler"]

[lib]
crate-type = ["staticlib"]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.37", default-features = false, features = ["native"] }
esp-idf-svc = { version = "0.52", optional = true, default-features = false, features = ["alloc", "alloc_handler", "native"] }
log = { version = "0.4", optional = true, default-features = false }

[build-dependencies]
embuild = "0.33"

# Temporary patches until IDF 6.0 support is released on crates.io
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "master" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "master" }
embuild = { git = "https://github.com/esp-rs/embuild", branch = "master" }
